samples/_failures_safe/1761221529_2e885a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6701bc69.c: In function ‘main’:
./samples/SAFE/__tmp_6701bc69.c:155:12: error: missing terminating " character
  155 |     printf("Compressed size
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6701bc69.c:155:5: error: expected expression at end of input
  155 |     printf("Compressed size
      |     ^~~~~~
./samples/SAFE/__tmp_6701bc69.c:155:5: error: expected declaration or statement at end of input
